# advent-of-code

./: .gitignore  README.md  download_inputs.py  pyproject.toml  requirements.txt
2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  intcode.py
2020/: console.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  passport.py  util.py
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2023/: day01.py  day02.py  day03.py  day04.py  day06.py  day07.py  day08.py  day09.py  day12.py  day13.py
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  grid.py  util.py
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  grid.py
aoc/: algorithms.py  grid.py  util.py
common/: algorithms.py  util.py
